--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!--<link rel="stylesheet" href="./bootstrap.css">-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <title>vue-demo</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
